--- a/Trevor_writing/stuff.tex
+++ b/Trevor_writing/stuff.tex
@@ -113,6 +113,11 @@ This leads to two possibilities beyond the critical point for the system. One po
 \subsection*{Environmental fluctuations}
 Realistically, the external environment dictates environmental conditions of the system both in short time scales (year fluctuations for example) and long time scales. To study the effects of these short time scale fluctuations, we choose to implement a yearly moisture cycle. The cycle dictates a repeating, yearly pattern of $\psi$ and thus $\nu$. To Incorporated this into the model, $\nu$ and $\psi$ were dynamically allocated over time based on the oscillatory behavior shown in (figure oscillating-psi-nu). Due to time limitations and scarce data on the parameters of these yearly oscillations, only two species of fungi were simulated. A comparison of their respective decomposition contributions with that of similar environmental conditions but static $\nu$ and $\psi$ is shown in (figure oscillating2nonoscillating-psi-contribution). There is no note-worthy new oscillatory motion seen in these results. There is also seen to be a slight increase in the effectiveness of both fungi in the oscillatory case. 
 
+\section*{Limitations}
+The coupling between our growth model and our decomposition kinetics model was scarsely found in the literature. The literature would typically either adopt a simpler mechanism of fungi growth with an equally complex mechanism of decomposition kinetics or a more complex mechanism for fungi nutrient uptake, but leaving off much of the complexity of the larger environment (especially interactions between fungi). This led to a lack of literature on parameter choices for the coupled system, leaving us to either choose parameter values from models simpler in either regard or to empirically derive our parameters by fitting the model output to other reasonable outputs (as was done with the parameter $G$). As was seen in the model comparison for different methods of coupling the growth equation to the decomposition kinetics, there are some unrealistic disagreements between the early behavior of each growth model; mainly that of a slight increase in the first maximum biomass reached by the carbon limiting growth model. We would expect overall that the biomass gained over time would be less overall when the nutrient level is limited. This is likely due to bad parameter choices, as described above or due to a failure to incorporate a more realistic relationship between the carbon decomposed and the carbon available for the fungi to supplement its own nutrient supply. \\
+The Michaelis-Menten dynamics we implemented often considers enzyme concentration to be proportional to the maximum rate of the reaction. Taking this concentration to be proportional to the total biomass in some set region of space does not account for the concentration of enzymes becoming saturated as the fungi spreads out more through space. A more realistic incorporation of this idea into the model would need to address the geometric complexities involved in examining only one region of a much larger fungi growth. An even more realistic treatment of this would account for fungal growth into areas that do not have physical access to the carbon being decomposed. At this point, a simplified one-dimensional growth model would not suffice. \\
+The effect of considering biomass proportional to concentration would be seen in the longer term behavior of the model, as the fungi growth becomes limited. We may expect to see more complex dynamics transitioning between the "unbounded" fungi growth and the steady-state behavior of fungi growth. Thus, the largest area of error for our results due to this assumption is likely in the area of time transitioning unbounded growth and steady-state behavior. \\
+It was observed in literature that there are direct interactions between fungi growing in the same environment by various mechanisms (NEED CITATION). Our model ignored the effects of these direct interactions and instead focused on indirect interactions via competition for the same nutrients source. The effects of fungi's mechanisms of sabotage via physical means is typically taken to be negligible and the dynamics of such interactions are likely too complicated to consider. However, the effect of space-limitation would likely cause there to be non-negligible limitations on fungal growth due to others obstructing their path or due to total lack of available space. Essentially, our simulation considered fungi competing for food, when in reality, they compete for food and space. In considering these effects, care must be taken to the space of consideration and the limitations of that space. Further review would need to be done to assess the limitations of various spaces, but because we are considering fungi in open ground liter without any obvious obstructions to their growth, spacial limitations on the fungi growth may be considered negligible. This assumption would not apply in the case of geometric isolation of a particular fungi but the geometric access of particular fungi to the substraight is another complexity that would need to be addressed in a higher-dimensional growth model. 
 
 
 \end{document}
