--- a/Trevor_writing/stuff.tex
+++ b/Trevor_writing/stuff.tex
@@ -101,20 +101,20 @@ Where $n$ is the total number of fungi being simulated.
 
 \section*{Analysis}
 \subsection*{Distribution of relative concentration of fungi}
-The model allows us to adjust the relative concentrations of each fungi species being simulated. In the model, this is represented with a set of $0<c_{i}\leq 1$ such that $\sum c_{i} = 1$. Each one of these $c_{i}$ multiplies the rates of hyphal density increase and boundary/initial conditions in the growth model. With this metric, the relative concentrations of different fungi species are forced to satisfy the conditions $B_{i}/B_{tot}=c_{i}$ where $B_{i}$ is the biomass of the $i$'th fungi species. This is obviously an unrealistic constraint on the system as the relative concentrations of different fungal species should fluctuate with time as the different species of fungi grow at varying rates. But for the purpose of assessing the effect of biodiversity on the overall decomposition of the substraight, concentration fluctuation would add unneeded complexity to the analysis. \\
-Also considered for this analysis are the competitive rankings of the different fungi species (CITATION NEEDED). The ranking-distribution coefficient, $a$ is then defined to be
+The model allows us to adjust the relative concentrations of each fungi species being simulated. In the model, this is represented with a set of $0<c_{i}\leq 1$ such that $\sum c_{i} = 1$. Each one of these $c_{i}$ multiplies the rates of hyphal density increase and boundary/initial conditions in the growth model. With this metric, the relative concentrations of different fungi species are forced to satisfy the conditions $B_{i}/B_{tot}=c_{i}$ where $B_{i}$ is the biomass of the '$i$'th fungi species. This is an unrealistic constraint, as the relative concentrations of different fungal species should fluctuate with time as the different species of fungi grow at varying rates. But for the purpose of assessing the effect of biodiversity on the overall decomposition of the substraight, concentration fluctuation would add unneeded complexity to the analysis. \\
+This analysis also considers the competitive rankings of the different fungi species \cite{Maynard2019}. The ranking-distribution coefficient, $a$ is then defined to be
 \begin{equation} \label{eq}
     a = \sum_{i=1}^{n} c_{i}*R_{i}
 \end{equation}
-Where $R_{i}$ s the competitive ranking for the $i$'th fungi species. The ranking-distribution coefficient can be though of as a dot-product in $n$-dimensional space (where $n$ is the number of various fungi species being simulated). So $a$ will be highest when the $n$-dimensional vectors "line-up" in the sense that the distribution of fungi species is closest to the distribution of competitive rankings.\\
+Where $R_{i}$ s the competitive ranking for the '$i$'th fungi species. The ranking-distribution coefficient can be though of as a dot-product in $n$-dimensional space (where $n$ is the number of various fungi species being simulated). So $a$ will be highest when the $n$-dimensional vectors "line-up" in the sense that the distribution of fungi species is closest to the distribution of competitive rankings.\\
 To study the effects of $a$ on the system overall, sample $c$ values had to be chosen. Due to a lack of literature results on simple, constant fungi distributions, arbitrary Gaussian distributions spread out over the different species of fungi were chosen. Because we are mainly concerned with the relation of any given distribution to the competitive rankings, the functions can be viewed as arbitrary or random distributions (because the ordering of fungal species in our Gaussian distribution has no physical meaning). The results of model runs using these various distributions is shown in (figure carbon-decrease-fungi-distribution). To assess the overall effectiveness of a single species distribution, the average carbon decrease over the whole interval was found via the equation $C_avg = \int (C_{0}-C)dt/(\delta t)$ where $C_{0}$ is our initial amount of carbon and $\delta t$ is the total time change over which the carbon decreases. The results of comparing this average carbon decomposed to the $a$ value for the species distribution in question is seen in (figure a-competative-distribution-coef-to-avg-Clost). Several interesting qualitative behaviors arise from the this comparison. Firstly, there is a clear smooth trend between $a$ and the average carbon decomposed up to approximately $a=0.65$. At this point the smooth trend completely vanishes and the data points appear to be randomly distributed in the area. We hypothesize that this critical value of $a$ could be representative of a bifurcation point; however further analysis on the dynamics of these coupled systems interacting would need to be done to investigate this hypothesis further. Additionally we notice that at this critical point, the average carbon decomposed tends to grow significantly. The physical interpretation of this critical point is deeply related to the effectiveness of the competitive rankings as they relate to a biologically diverse system. The results show that beyond a certain point, distributing the biodiversity more closely to the competitive rankings does not have any noticeable effect on the overall effectiveness of the system. \\
 This leads to two possibilities beyond the critical point for the system. One possibility is that optimum biodiversity is based on more complex dynamics than the competitive rankings can assess. The other possibility is that the system behaves in a chaotic or random nature beyond this critical point and no clear metric of biodiversity could be correlated to the effectiveness of a given distribution.
 
 \subsection*{Environmental fluctuations}
-Realistically, the external environment dictates environmental conditions of the system both in short time scales (year fluctuations for example) and long time scales. To study the effects of these short time scale fluctuations, we choose to implement a yearly moisture cycle. The cycle dictates a repeating, yearly pattern of $\psi$ and thus $\nu$. To Incorporated this into the model, $\nu$ and $\psi$ were dynamically allocated over time based on the oscillatory behavior shown in (figure oscillating-psi-nu). Due to time limitations and scarce data on the parameters of these yearly oscillations, only two species of fungi were simulated. A comparison of their respective decomposition contributions with that of similar environmental conditions but static $\nu$ and $\psi$ is shown in (figure oscillating2nonoscillating-psi-contribution). There is no note-worthy new oscillatory motion seen in these results. There is also seen to be a slight increase in the effectiveness of both fungi in the oscillatory case. 
+Realistically, the external environment dictates environmental conditions of the system both in short time scales (year fluctuations for example) and long time scales. Due to the time scales of our model, the effects of very fast fluctuations (due to outside forces) on the scale of days are not considered as relative changes in the model's state have negligible changes on the order of a day. Thus we define our short term fluctuations to be roughly seasonal as this dictates the majority of local environmental variability. To study the effects of these short time scale fluctuations, we choose to implement an abstracted yearly moisture cycle, specifically that of the temperate forest environment. The cycle oscillates between the average yearly maximum and minimum values of $\psi$ twice a year, creating a rough yearly pattern of $\psi$ and thus $\nu$ for a given fungi from experimental data \cite{Zobel2001}\cite{Maynard2019}. Note that this moisture model is limited in assuming one period oscillation between a maximum and a minimum yearly, neglecting the reality of oscillating between local minimum in summer and winter and locate maximums in fall and spring. To incorporate this into the model, $\nu$ and $\psi$ were dynamically allocated over time based on the oscillatory behavior shown in (figure oscillating-psi-nu). Due to time limitations and scarce data on the parameters over these yearly oscillations, only two species of fungi were simulated. A comparison of their respective decomposition contributions with that of similar environmental conditions but static $\nu$ and $\psi$ is shown in (figure oscillating2nonoscillating-psi-contribution). There is no note-worthy new oscillatory motion seen in these results. There is also seen to be a slight increase in the effectiveness of both fungi in the oscillatory case. The interpretation of this increase can be that for time scales on the order of a year, the positives affect of increasing $\nu$ is greater than that of the negative affect of decreasing $\nu$ by the same amount. This would lead us to believe that faster oscillations of $\nu$ will generally have a positive net impact on the decomposition. The frequency limits of this principle would require further investigation. 
 
 \section*{Limitations}
-The coupling between our growth model and our decomposition kinetics model was scarsely found in the literature. The literature would typically either adopt a simpler mechanism of fungi growth with an equally complex mechanism of decomposition kinetics or a more complex mechanism for fungi nutrient uptake, but leaving off much of the complexity of the larger environment (especially interactions between fungi). This led to a lack of literature on parameter choices for the coupled system, leaving us to either choose parameter values from models simpler in either regard or to empirically derive our parameters by fitting the model output to other reasonable outputs (as was done with the parameter $G$). As was seen in the model comparison for different methods of coupling the growth equation to the decomposition kinetics, there are some unrealistic disagreements between the early behavior of each growth model; mainly that of a slight increase in the first maximum biomass reached by the carbon limiting growth model. We would expect overall that the biomass gained over time would be less overall when the nutrient level is limited. This is likely due to bad parameter choices, as described above or due to a failure to incorporate a more realistic relationship between the carbon decomposed and the carbon available for the fungi to supplement its own nutrient supply. \\
+The coupling between our growth model and our decomposition kinetics model was scarcely found in the literature. The literature would typically either adopt a simpler mechanism of fungi growth with an equally complex mechanism of decomposition kinetics or a more complex mechanism for fungi nutrient uptake, but leaving off much of the complexity of the larger environment (especially interactions between fungi). This led to a lack of literature on parameter choices for the coupled system, leaving us to either choose parameter values from models simpler in either regard or to empirically derive our parameters by fitting the model output to other reasonable outputs (as was done with the parameter $G$). As was seen in the model comparison for different methods of coupling the growth equation to the decomposition kinetics, there are some unrealistic disagreements between the early behavior of each growth model; mainly that of a slight increase in the first maximum biomass reached by the carbon limiting growth model. We would expect overall that the biomass gained over time would be less overall when the nutrient level is limited. This is likely due to bad parameter choices, as described above or due to a failure to incorporate a more realistic relationship between the carbon decomposed and the carbon available for the fungi to supplement its own nutrient supply. \\
 The Michaelis-Menten dynamics we implemented often considers enzyme concentration to be proportional to the maximum rate of the reaction. Taking this concentration to be proportional to the total biomass in some set region of space does not account for the concentration of enzymes becoming saturated as the fungi spreads out more through space. A more realistic incorporation of this idea into the model would need to address the geometric complexities involved in examining only one region of a much larger fungi growth. An even more realistic treatment of this would account for fungal growth into areas that do not have physical access to the carbon being decomposed. At this point, a simplified one-dimensional growth model would not suffice. \\
 The effect of considering biomass proportional to concentration would be seen in the longer term behavior of the model, as the fungi growth becomes limited. We may expect to see more complex dynamics transitioning between the "unbounded" fungi growth and the steady-state behavior of fungi growth. Thus, the largest area of error for our results due to this assumption is likely in the area of time transitioning unbounded growth and steady-state behavior. \\
 It was observed in literature that there are direct interactions between fungi growing in the same environment by various mechanisms (NEED CITATION). Our model ignored the effects of these direct interactions and instead focused on indirect interactions via competition for the same nutrients source. The effects of fungi's mechanisms of sabotage via physical means is typically taken to be negligible and the dynamics of such interactions are likely too complicated to consider. However, the effect of space-limitation would likely cause there to be non-negligible limitations on fungal growth due to others obstructing their path or due to total lack of available space. Essentially, our simulation considered fungi competing for food, when in reality, they compete for food and space. In considering these effects, care must be taken to the space of consideration and the limitations of that space. Further review would need to be done to assess the limitations of various spaces, but because we are considering fungi in open ground liter without any obvious obstructions to their growth, spacial limitations on the fungi growth may be considered negligible. This assumption would not apply in the case of geometric isolation of a particular fungi but the geometric access of particular fungi to the substraight is another complexity that would need to be addressed in a higher-dimensional growth model. 
